@@ -36,8 +36,8 @@ module Druid
     #
     def page_url(url)
       define_method("goto") do
-        url = url.kind_of?(Symbol) ? self.send(url) : url
-        erb = ERB.new(%Q{#{url}})
+        lookup = url.kind_of?(Symbol) ? self.send(url) : url
+        erb = ERB.new(%Q{#{lookup}})
         merged_params = self.class.instance_variable_get("@merged_params")
         params = merged_params ? merged_params : self.class.params
         driver.goto erb.result(binding)
